<resources>
    <string name="app_name">TheCheezery</string>
    <string name="welcome_text">Welcome to the cheezery</string>
    <string name="welcome_description">Home of the most wonderful desserts ever seen by the human being</string>
    <string name="button_start">Get started</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="terms">I have read and accept and codition of the cheezery</string>
    <string name="sign_in">Sign in</string>
    <string name="ourmenu">Our menu</string>
    <string name="colddriks">Cold drinks</string>
    <string name="hotdrinks">Hot drinks</string>
    <string name="sweet">Sweets</string>
    <string name="salties">Salties</string>
    <string name="combos">Combos</string>
    <string name="customizable">Custom</string>
</resources>