<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:src="@drawable/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/ourmenu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">
        <Button
            android:id="@+id/button_cold_drinks"
            android:text="@string/colddriks"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menubuttonpadding"
            android:layout_marginRight="@dimen/menubuttonmargin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menubuttontext"
            android:paddingVertical="@dimen/menubuttonpadding_v"
            />

        <Button
            android:id="@+id/button_hot_drinks"
            android:text="@string/hotdrinks"
            android:textColor="@color/dusty_white"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menubuttonpadding"
            android:layout_marginLeft="@dimen/menubuttonmargin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menubuttontext"
            android:paddingVertical="@dimen/menubuttonpadding_v"
            />

        <Button
            android:id="@+id/sweets"
            android:text="@string/sweet"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menubuttonpadding"
            android:layout_marginRight="@dimen/menubuttonmargin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menubuttontext"
            android:paddingVertical="@dimen/menubuttonpadding_v"
            />

        <Button
            android:id="@+id/salties"
            android:text="@string/salties"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menubuttonpadding"
            android:layout_marginLeft="@dimen/menubuttonmargin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menubuttontext"
            android:paddingVertical="@dimen/menubuttonpadding_v"
            />

        <Button
            android:id="@+id/combos"
            android:text="@string/combos"
            android:textColor="@color/dusty_white"
            android:background="@drawable/third_gradient"
            android:paddingHorizontal="@dimen/menubuttonpadding"
            android:layout_marginRight="@dimen/menubuttonmargin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menubuttontext"
            android:paddingVertical="@dimen/menubuttonpadding_v"
            />

        <Button
            android:id="@+id/customizable"
            android:text="@string/customizable"
            android:textColor="@color/dusty_white"
            android:background="@drawable/second_gradient"
            android:paddingHorizontal="@dimen/menubuttonpadding"
            android:layout_marginLeft="@dimen/menubuttonmargin"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1"
            android:textSize="@dimen/menubuttontext"
            android:paddingVertical="@dimen/menubuttonpadding_v"
            />



    </GridLayout>

</LinearLayout>